[package]
name = "lock-and-transaction"
version = "0.1.0"
edition = "2021"

[dependencies]
postgres = "0.19.9"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "macros", "postgres", "bigdecimal"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
